external-crates/move/crates/move-compiler/tests/sui_mode/id_leak/private_pack.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: sui
  edition: legacy
  lint: false
---
error[E04001]: restricted visibility
   ┌─ tests/sui_mode/id_leak/private_pack.move:19:9
   │
 5 │     struct A has key {
   │            - Struct defined in module 'a::a'
   ·
19 │         A { id }
   │         ^^^^^^^^ Struct 'a::a::A' can only be instantiated within its defining module 'a::a'
